<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="0dp">

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mi_ubicacion" ></TextView>
    <Button
        android:id="@+id/btnFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionarFrom"></Button>

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_donde_quieres_ir" ></TextView>
    <Button
        android:id="@+id/btnTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionarTo"></Button>

    <!--Mapa-->

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />





</LinearLayout>